[gd_scene load_steps=9 format=2]

[ext_resource path="res://Interface/Themes/theme_ui.tres" type="Theme" id=1]
[ext_resource path="res://Interface/Themes/theme_title.tres" type="Theme" id=2]
[ext_resource path="res://Interface/Styleboxes/stylebox_button_hover.tres" type="StyleBox" id=3]
[ext_resource path="res://Interface/Styleboxes/stylebox_button.tres" type="StyleBox" id=4]
[ext_resource path="res://Interface/Styleboxes/stylebox_menu.tres" type="StyleBox" id=5]
[ext_resource path="res://Interface/Styleboxes/stylebox_button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Interface/TimeBasedMenuUIScript.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="TimeBasedMenu" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.309
margin_top = -180.025
margin_right = 255.691
margin_bottom = 179.975
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToChooseModeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0
margin_top = 305.015
margin_right = 29.0
margin_bottom = 331.015
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.5
margin_top = 261.227
margin_right = 24.5
margin_bottom = 287.227
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 44.8985
margin_right = 160.0
margin_bottom = 108.898
theme = ExtResource( 2 )
text = "Time Based"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionContainer" type="Panel" parent="."]
margin_left = 93.1031
margin_top = 112.603
margin_right = 417.103
margin_bottom = 240.603
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoOfTurnsLabel" type="Label" parent="SelectionContainer"]
margin_top = 24.0
margin_right = 328.0
margin_bottom = 42.0
theme = ExtResource( 1 )
text = "Time:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapSizeLabel" type="Label" parent="SelectionContainer"]
margin_top = 70.0
margin_right = 312.0
margin_bottom = 88.0
theme = ExtResource( 1 )
text = "Map Size:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1minButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.9999
margin_top = 24.0
margin_right = -40.9999
margin_bottom = 50.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
toggle_mode = true
text = "1:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5minButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.9999
margin_top = 24.0
margin_right = 26.0001
margin_bottom = 50.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
toggle_mode = true
text = "5:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10minButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 35.0001
margin_top = 24.0
margin_right = 95.0001
margin_bottom = 50.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "10:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="30minButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 100.685
margin_top = 24.0
margin_right = 168.685
margin_bottom = 50.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "30:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="32x32SizeButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.4719
margin_top = 69.9463
margin_right = 27.5281
margin_bottom = 95.9463
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
toggle_mode = true
text = "32x32"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="64x64SizeButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 19.5281
margin_top = 69.5258
margin_right = 95.5281
margin_bottom = 95.5258
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "64x64"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="128x128SizeButton" type="Button" parent="SelectionContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 88.0001
margin_top = 69.946
margin_right = 176.0
margin_bottom = 95.946
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
toggle_mode = true
text = "128x128"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefinitelyNotAButton" type="Button" parent="SelectionContainer"]
visible = false
margin_right = 12.0
margin_bottom = 20.0
[connection signal="pressed" from="BackToChooseModeButton" to="." method="_on_BackToChooseModeButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SelectionContainer/1minButton" to="." method="_on_1minButton_pressed"]
[connection signal="pressed" from="SelectionContainer/5minButton" to="." method="_on_5minButton_pressed"]
[connection signal="pressed" from="SelectionContainer/10minButton" to="." method="_on_10minButton_pressed"]
[connection signal="pressed" from="SelectionContainer/30minButton" to="." method="_on_30minButton_pressed"]
[connection signal="pressed" from="SelectionContainer/32x32SizeButton" to="." method="_on_32x32SizeButton_pressed"]
[connection signal="pressed" from="SelectionContainer/64x64SizeButton" to="." method="_on_64x64SizeButton_pressed"]
[connection signal="pressed" from="SelectionContainer/128x128SizeButton" to="." method="_on_128x128SizeButton_pressed"]
